--- a/casestudies/112/casestudy/www/layout/case_id_112_id_226_c_bio.html
+++ b/casestudies/112/casestudy/www/layout/case_id_112_id_226_c_bio.html
@@ -1,32 +1,59 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-  <head>
-    <title>Evidence mounts | Credible Voice: WHO-Beijing and the SARS Crisis</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-    <style type="text/css" media="all">@import "css_global/node/node.css";</style>
-    <style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-    <style type="text/css" media="all">@import "css_global/system/system.css";</style>
-    <style type="text/css" media="all">@import "css_global/user/user.css";</style>
-    <style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-    <style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-    <style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-    <script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-    <script type="text/javascript" src="js/img_assist.js"></script>
-    <script type="text/javascript" src="js/audioimage.js"></script>
-    <script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-    <script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-    <script type="text/javascript" src="swfobject.js"></script> 
-    <script type="text/javascript">
-      var GB_ROOT_DIR = "com/greybox/";
-      </script>
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: Alan Schnur | Credible Voice: WHO-Beijing and the SARS Crisis
+  </title>
+  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+   <style media="all" type="text/css">
+    @import "css_global/book/book.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/node/node.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/defaults.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/system.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/user/user.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/img_assist/img_assist.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/knightcase/style.css";
+   </style>
+   <style media="print" type="text/css">
+    @import "css_global/knightcase/print.css";
+   </style>
+   <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+   </script>
+   <script src="js/img_assist.js" type="text/javascript">
+   </script>
+   <script src="js/audioimage.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.media.js" type="text/javascript">
+   </script>
+   <script src="swfobject.js" type="text/javascript">
+   </script>
+   <script type="text/javascript">
+    var GB_ROOT_DIR = "com/greybox/";
+   </script>
+   <script src="com/greybox/AJS.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/AJS_fx.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/gb_scripts.js" type="text/javascript">
+   </script>
+   <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+   <script type="text/javascript">
+    var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -34,14 +61,14 @@
           return false;
         });
       });
-    </script>
-    <script type="text/javascript">
-      $(function() {
+   </script>
+   <script type="text/javascript">
+    $(function() {
         $('a.media').media();
-      });
-    </script>
-<style>
-#main .title
+    });
+   </script>
+   <style>
+    #main .title
 {
 	color: ;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -54,296 +81,256 @@
 	color: ;
 }
 
-#media 
-{
-    font-style:italic;
+#media {
+font-style:italic;
 }
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/112/180-0171Crediblevoicev2.jpeg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_112.html" title="Home"><span>Biography: Alan Schnur</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_112.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_775.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_776.html">Brief History of WHO</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_777.html">WHO-Beijing</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_778.html">Email from Guangdong</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_779.html">Evidence mounts</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_780.html">Media Relations</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_781.html">Organizing for Crisis</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_782.html">Mission #1</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_783.html">Virulent disease</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_784.html">Spinning the Wheels</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_785.html">Getting to Guangdong</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_786.html">The Dam Breaks</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_787.html">Mission in Beijing</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_112_id_788.html">Intervention at what price?</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/112/WHO&#32;SARS_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_112.html">Home</a></div>		
-		<h1 class="title">Biography: Alan&nbsp;Schnur</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><div style="float:right;padding:10px">
-	<img src="../../files/photos/749/Untitled.png" style="height: 192px; width: 150px;" /><br />
-	<p class="caption">
-		Alan Schnur</p>
-</div>
-<p>
-	Alan Schnur was Team Leader, Communicable Disease Control, in the WHO Beijing office at the time of the<br />
-	SARS outbreak. Before his 1994 assignment to China, he worked with communicable disease eradication and<br />
-	control programs in Africa and Asia, including 12 years in the WHO regional offices in Manila and New Delhi.<br />
-	He has authored or co-authored 13 book chapters and journal articles on smallpox eradication, immunization<br />
-	programs, polio eradication, and Severe Acute Respiratory Syndrome (SARS).</p>
-<p>
-	&nbsp;</p>
-<p>
-	<i>Listen to Schnur on the first, unscheduled press conference. </i></p>
-<p>
-	<img alt="" border="0" class="audiofile" src="../../files/audios/320/Schnur&#32;bio&#32;clip.mp3" /></p>
-</div>
+   </style>
+  </meta>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/112/180-0171Crediblevoicev2.jpeg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tr>
+      <td style="width: 100%;">
+       <h1 class="site-name">
+        <a href="case_id_112.html" title="Home">
+         <span>
+          Biography: Alan Schnur
+         </span>
+        </a>
+       </h1>
+      </td>
+      <td class="kcsi_logo">
+       <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+       </a>
+      </td>
+     </tr>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_112.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_775.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_776.html">
+          Brief History of WHO
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_777.html">
+          WHO-Beijing
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_778.html">
+          Email from Guangdong
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_779.html">
+          Evidence mounts
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_780.html">
+          Media Relations
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_781.html">
+          Organizing for Crisis
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_782.html">
+          Mission #1
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_783.html">
+          Virulent disease
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_784.html">
+          Spinning the Wheels
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_785.html">
+          Getting to Guangdong
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_786.html">
+          The Dam Breaks
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_787.html">
+          Mission in Beijing
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_788.html">
+          Intervention at what price?
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_112_id_225_c_bio.html">Dr. Henk&nbsp;Bekedam</a></li>
-
-<li class="leaf"><a  class="active"  href="case_id_112_id_226_c_bio.html">Alan&nbsp;Schnur</a></li>
-
-<li class="leaf"><a  href="case_id_112_id_227_c_bio.html">Dr. Daniel&nbsp;Chin</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/112/WHO SARS_wm.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_112.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+      Biography: Alan&nbsp;Schnur      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="float:right;padding:10px">
+         <img src="../../files/photos/749/Untitled.png" style="height: 192px; width: 150px;"/>
+         <br/>
+         <p class="caption">
+          Alan Schnur
+         </p>
+        </div>
+        <p>
+         Alan Schnur was Team Leader, Communicable Disease Control, in the WHO Beijing office at the time of the
+         <br/>
+         SARS outbreak. Before his 1994 assignment to China, he worked with communicable disease eradication and
+         <br/>
+         control programs in Africa and Asia, including 12 years in the WHO regional offices in Manila and New Delhi.
+         <br/>
+         He has authored or co-authored 13 book chapters and journal articles on smallpox eradication, immunization
+         <br/>
+         programs, polio eradication, and Severe Acute Respiratory Syndrome (SARS).
+        </p>
+        <p>
+        </p>
+        <p>
+         <i>
+          Listen to Schnur on the first, unscheduled press conference.
+         </i>
+        </p>
+        <p>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/320/Schnur&#32;bio&#32;clip.mp3"/>-->
+         <audio controls>
+            <source src="../../files/audios/320/Schnur&#32;bio&#32;clip.mp3" type="audio/mpeg">
+          </audio>
+        </p>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_112_id_225_c_bio.html">
+         Dr. Henk&nbsp;Bekedam
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_112_id_226_c_bio.html">
+         Alan&nbsp;Schnur
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_112_id_227_c_bio.html">
+         Dr. Daniel&nbsp;Chin
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+         © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
